--- a/pages/247.html
+++ b/pages/247.html
@@ -310,7 +310,7 @@ margin-left: 0em;
 <div id="revision">
     <p>I am an Assistant Professor at the <a href='http://www.sandiego.edu'>University of San Diego</a>. Here is my <a href='http://home.sandiego.edu/~shulman/'>web page</a>.</p>
 
-<p>I have recently been deeply involved in <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a>. I am also interested in (higher) <a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a> and its applications to the rest of mathematics, particularly <a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a>. I also tend to be a partisan of higher-categorical structures other than <math class='maruku-mathml' display='inline' id='mathml_b364874c58e99717fe5ed77ceaf9b8c18929dd9c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-categories (such as <a class='existingWikiWord' href='/nlab/show/double+category'>double categories</a>, <a class='existingWikiWord' href='/nlab/show/multicategory'>multicategories</a>, <a class='existingWikiWord' href='/nlab/show/2-category+equipped+with+proarrows'>proarrow equipments</a>, <a class='existingWikiWord' href='/nlab/show/F-category'>F-categories</a>, and so on), which sometimes seem to get neglected.</p>
+<p>I have recently been deeply involved in <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a>. I am also interested in (higher) <a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a> and its applications to the rest of mathematics, particularly <a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a>. I also tend to be a partisan of higher-categorical structures other than <math class='maruku-mathml' display='inline' id='mathml_6d4be0b31282be25fc70ecead63383e747fcd0d8_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-categories (such as <a class='existingWikiWord' href='/nlab/show/double+category'>double categories</a>, <a class='existingWikiWord' href='/nlab/show/multicategory'>multicategories</a>, <a class='existingWikiWord' href='/nlab/show/2-category+equipped+with+proarrows'>proarrow equipments</a>, <a class='existingWikiWord' href='/nlab/show/F-category'>F-categories</a>, and so on), which sometimes seem to get neglected.</p>
 
 <p><a href='http://ncatlab.org/michaelshulman/show/HomePage'>Personal area</a></p>
 
@@ -336,11 +336,11 @@ margin-left: 0em;
 <li>write <a class='existingWikiWord' href='/nlab/show/descent+object'>descent object</a></li>
 </ul>
 
-<p>And here’s how to make a barred arrow <math class='maruku-mathml' display='inline' id='mathml_b364874c58e99717fe5ed77ceaf9b8c18929dd9c_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mi>⇸</mi><mi>B</mi></mrow><annotation encoding='application/x-tex'>A &amp;#x21F8; B</annotation></semantics></math>, since I always forget:</p>
+<p>And here’s how to make a barred arrow <math class='maruku-mathml' display='inline' id='mathml_6d4be0b31282be25fc70ecead63383e747fcd0d8_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mi>⇸</mi><mi>B</mi></mrow><annotation encoding='application/x-tex'>A &amp;#8696; B</annotation></semantics></math>, since I always forget:</p>
 
-<pre><code>  &amp;#x21F8;</code></pre>
+<pre><code>  &amp;#8696;</code></pre>
 
-<p>And here’s the esh <math class='maruku-mathml' display='inline' id='mathml_b364874c58e99717fe5ed77ceaf9b8c18929dd9c_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ʃ</mi></mrow><annotation encoding='application/x-tex'>&amp;#643;</annotation></semantics></math> (see <a href='http://nforum.mathforge.org/discussion/4594/shape-modality-flat-modality-sharp-modality/?Focus=37694#Comment_37694'>here</a>):</p>
+<p>And here’s the esh <math class='maruku-mathml' display='inline' id='mathml_6d4be0b31282be25fc70ecead63383e747fcd0d8_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ʃ</mi></mrow><annotation encoding='application/x-tex'>&amp;#643;</annotation></semantics></math> (see <a href='http://nforum.ncatlab.org/discussion/4594/shape-modality-flat-modality-sharp-modality/?Focus=37694#Comment_37694'>here</a>):</p>
 
 <pre><code>  &amp;#643;</code></pre>
 
@@ -352,14 +352,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April  7, 2015 02:40:03 
+  Revised on October 12, 2017 13:07:03 
   by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
-  (173.13.112.142)
+  (69.75.108.203)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Mike+Shulman" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Mike+Shulman/42" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(42 revisions)</span> | <a href="/nlab/show/diff/Mike+Shulman" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Mike+Shulman" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Mike+Shulman" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Mike+Shulman/43" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(43 revisions)</span> | <a href="/nlab/show/diff/Mike+Shulman" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Mike+Shulman" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
