--- a/pages/18623.html
+++ b/pages/18623.html
@@ -541,7 +541,7 @@ margin-left: 0em;
 <p>For <strong><a class='existingWikiWord' href='/nlab/show/proof'>proof</a></strong> see <a href='S-matrix#PerturbativeQuantumObservablesIsLocalnet'>this prop.</a> at <em><a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a></em>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
-<table><thead><tr><th>product in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative QFT</a></th><th><math class='maruku-mathml' display='inline' id='mathml_d6e63845c5f5d76cc40e9215c5c3471bec99e016_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,\,</annotation></semantics></math> induces</th></tr></thead><tbody><tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>normal-ordered product</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebra</a> (<a class='existingWikiWord' href='/nlab/show/free+field'>free field</a> <a class='existingWikiWord' href='/nlab/show/quantum+observable'>quantum observables</a>)</td></tr>
+<table><thead><tr><th>product in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative QFT</a></th><th><math class='maruku-mathml' display='inline' id='mathml_fed5ec418a2d2e9dc76e5f301564dedc7d43c6a7_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,\,</annotation></semantics></math> induces</th></tr></thead><tbody><tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>normal-ordered product</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebra</a> (<a class='existingWikiWord' href='/nlab/show/free+field'>free field</a> <a class='existingWikiWord' href='/nlab/show/quantum+observable'>quantum observables</a>)</td></tr>
 <tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Dyson+formula'>time-ordered product</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a> (<a class='existingWikiWord' href='/nlab/show/scattering+amplitude'>scattering amplitudes</a>)</td></tr>
 <tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/retarded+product'>retarded product</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/interacting+quantum+observables'>interacting quantum observables</a></td></tr>
 </tbody></table>
@@ -588,17 +588,21 @@ margin-left: 0em;
 <p>
  
 </p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Created on September 19, 2017 07:41:34 
+  Revised on October 18, 2017 10:49:26 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (185.25.95.132)
+  (195.37.234.70)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/interacting+quantum+observables" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/interacting+quantum+observables" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/interacting+quantum+observables/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/interacting+quantum+observables" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/interacting+quantum+observables" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
