--- a/pages/6321.html
+++ b/pages/6321.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1176,6 +1176,18 @@ margin-left: 0em;
 <li><a class='existingWikiWord' href='/nlab/show/Michael+D%C3%BCtsch'>Michael Dütsch</a>, <a class='existingWikiWord' href='/nlab/show/Klaus+Fredenhagen'>Klaus Fredenhagen</a>, <em>A local (perturbative) construction of observables in gauge theores: the example of QED</em> , Commun. Math. Phys. 203 (1999), no.1, 71-105, (<a href='http://xxx.uni-augsburg.de/abs/hep-th/9807078'>arXiv:hep-th/9807078</a>).</li>
 </ul>
 
+<p>and in the further generality of non-abelian <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a> in</p>
+
+<ul>
+<li id='Hollands07'><a class='existingWikiWord' href='/nlab/show/Stefan+Hollands'>Stefan Hollands</a>, <em>Renormalized Quantum Yang-Mills Fields in Curved Spacetime</em>, Rev. Math. Phys. 20:1033-1172, 2008 (<a href='https://arxiv.org/abs/0705.3340'>arXiv:0705.3340</a>)</li>
+</ul>
+
+<p>Discussion of the <a class='existingWikiWord' href='/nlab/show/adiabatic+switching'>adiabatic limit</a> (dealing with <a class='existingWikiWord' href='/nlab/show/infrared+divergence'>infrared divergences</a>) is in</p>
+
+<ul>
+<li id='Duch17'><a class='existingWikiWord' href='/nlab/show/Pawe%C5%82+Duch'>Paweł Duch</a>, <em>Massless fields and adiabatic limit in quantum field theory</em> (<a href='https://arxiv.org/abs/1709.09907'>arXiv:1709.09907</a>)</li>
+</ul>
+
 <p>Comparison to <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> is reviewed in</p>
 
 <ul>
@@ -1189,14 +1201,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 13, 2017 05:30:58 
+  Revised on October 19, 2017 10:50:03 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (77.56.177.247)
+  (192.76.172.80)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quantum+electrodynamics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+electrodynamics/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/quantum+electrodynamics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+electrodynamics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quantum+electrodynamics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+electrodynamics/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/quantum+electrodynamics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+electrodynamics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
