--- a/pages/8297.html
+++ b/pages/8297.html
@@ -317,18 +317,19 @@ margin-left: 0em;
 <p>
  
  
+ 
 </p>
 </div>
 
 <div class="revisedby">
-  Created on August 30, 2012 17:36:08 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.139.33)
+  Revised on October 20, 2017 03:51:10 
+  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
+  (129.12.18.176)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Henri+Poincar%C3%A9" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Henri+Poincar%C3%A9" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Henri+Poincar%C3%A9/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Henri+Poincar%C3%A9" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Henri+Poincar%C3%A9" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
