--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,18 +308,28 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>…</p>
+    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_29fc5148fd9ae62ddb83c59b824224864274b981_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><msub><mi>Γ</mi> <mi>X</mi></msub><mo stretchy='false'>(</mo><mi>T</mi><mi>X</mi><mo stretchy='false'>)</mo></mtd> <mtd><mover><mo>⟶</mo><mrow><mphantom><mi>A</mi></mphantom><mo>≃</mo><mphantom><mi>A</mi></mphantom></mrow></mover></mtd> <mtd><mi>Der</mi><mo stretchy='false'>(</mo><msup><mi>C</mi> <mn>∞</mn></msup><mo stretchy='false'>(</mo><mi>X</mi><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mtd></mtr> <mtr><mtd><mi>v</mi></mtd> <mtd><mo>↦</mo></mtd> <mtd><mrow><mo>(</mo><mi>f</mi><mo>↦</mo><mo stretchy='false'>(</mo><mi>d</mi><mi>f</mi><mo stretchy='false'>)</mo><mo stretchy='false'>(</mo><mi>v</mi><mo stretchy='false'>)</mo><mo>)</mo></mrow></mtd></mtr></mtable></mrow><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+     \array{
+       \Gamma_X(T X)
+         &amp;\overset{\phantom{A}\simeq\phantom{A}}{\longrightarrow}&amp;
+       Der(C^\infty(X))
+       \\
+       v &amp;\mapsto&amp; \left( f \mapsto (d f)(v) \right)
+     }
+     \,.
+   
+</annotation></semantics></math></div>
 </div>
 
 <div class="revisedby">
-  Revised on October 19, 2017 04:29:07 
+  Revised on October 20, 2017 08:29:30 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  (92.76.24.83)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1161" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1161 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1162" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1162 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
