--- a/pages/18708.html
+++ b/pages/18708.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,7 +308,125 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
+    <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
+
+<h4 id='constructivism_realizability_computability'>Constructivism, Realizability, Computability</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/constructive+mathematics'>constructive mathematics</a></strong>, <strong><a class='existingWikiWord' href='/nlab/show/realizability'>realizability</a></strong>, <strong><a class='existingWikiWord' href='/nlab/show/computability'>computability</a></strong></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/intuitionistic+mathematics'>intuitionistic mathematics</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/propositions+as+types'>propositions as types</a>, <a class='existingWikiWord' href='/nlab/show/proofs+as+programs'>proofs as programs</a>, <a class='existingWikiWord' href='/nlab/show/computational+trinitarianism'>computational trinitarianism</a></p>
+
+<h3 id='constructive_mathematics'>Constructive mathematics</h3>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/topos'>topos</a>, <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>homotopy topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/type+theory'>type theory</a>, <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/canonical+form'>canonical form</a>, <a class='existingWikiWord' href='/nlab/show/univalence+axiom'>univalence</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Bishop+set'>Bishop set</a>, <a class='existingWikiWord' href='/nlab/show/h-set'>h-set</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/decidable+equality'>decidable equality</a>, <a class='existingWikiWord' href='/nlab/show/decidable+subset'>decidable subset</a>, <a class='existingWikiWord' href='/nlab/show/inhabited+set'>inhabited set</a>, <a class='existingWikiWord' href='/nlab/show/subsingleton'>subsingleton</a></p>
+</li>
+</ul>
+
+<h3 id='realizability'>Realizability</h3>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/realizability+topos'>realizability topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/realizability+model'>realizability model</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Brouwer-Heyting-Kolmogorov+interpretation'>realizability interpretation</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/effective+topos'>effective topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/partial+combinatory+algebra'>Kleene&#39;s first algebra</a>, <a class='existingWikiWord' href='/nlab/show/Kleene%27s+second+algebra'>Kleene&#39;s second algebra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/function+realizability'>function realizability</a></p>
+</li>
+</ul>
+
+<h3 id='computability'>Computability</h3>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/computability'>computability</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/computation'>computation</a>, <a class='existingWikiWord' href='/nlab/show/computational+type+theory'>computational type theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/computable+function'>computable function</a>, <a class='existingWikiWord' href='/nlab/show/partial+recursive+function'>partial recursive function</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/computable+analysis'>computable analysis</a>, <a class='existingWikiWord' href='/nlab/show/constructive+analysis'>constructive analysis</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Type+Two+Theory+of+Effectivity'>Type Two Theory of Effectivity</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/computable+function+%28analysis%29'>computable function (analysis)</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/exact+real+computer+arithmetic'>exact real computer arithmetic</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/computable+set'>computable set</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/persistent+homology'>persistent homology</a>, <a class='existingWikiWord' href='/nlab/show/effective+homology'>effective homology</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/computable+physics'>computable physics</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Church-Turing+thesis'>Church-Turing thesis</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+
+<h1 id='contents'>Contents</h1>
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
@@ -324,24 +442,24 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>Neil Immerman, Descriptive Complexity. Graduate texts in computer science (Springer-Verlag New York Inc.) (1999)</p>
+<p>Neil Immerman, <em>Descriptive Complexity</em>, Graduate texts in computer science (Springer-Verlag New York Inc.) (1999)</p>
 </li>
 
 <li>
-<p>Fagin, Ronald. “Generalized first-order spectra and polynomial-time recognizable sets”. Complexity of Computation, ed. R. Karp, SIAM-AMS Proceedings, Vol. Vol. 7 (1974):43-73.</p>
+<p>Ronald Fagin, <em>Generalized first-order spectra and polynomial-time recognizable sets</em>, Complexity of Computation, ed. R. Karp, SIAM-AMS Proceedings, Vol. Vol. 7 (1974):43-73.</p>
 </li>
 </ul>
 </div>
 
 <div class="revisedby">
-  Revised on October 22, 2017 11:07:02 
+  Revised on October 22, 2017 13:56:09 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.50.90)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/descriptive+complexity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/descriptive+complexity/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/descriptive+complexity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/descriptive+complexity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/descriptive+complexity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/descriptive+complexity/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/descriptive+complexity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/descriptive+complexity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
